# pxSort2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.cfg  setup.py
cmake/: cpp.cmake  python.cmake
cpp/: CMakeLists.txt  Image.cpp  Image.h  Map.cpp  Map.h  Segment.cpp  Segment.h  Sorter.cpp  Sorter.h  common.h  python_bindings.cpp
cython/: CMakeLists.txt  Image.pxd  setup.py
example/: radar_sweep.py
examples/: sort_image.py
misc/old-code-experiments/: __init__.py  main.py
pxsort/: CMakeLists.txt  Comparator.cpp  Comparator.h  Effect.cpp  Effect.h  Image.cpp  Image.h  Mixer.cpp  Mixer.h  Segment.cpp  Segment.h  Segmentation.cpp  Segmentation.h  common.h
pxsort/effect/: BubbleSort.h  BucketSort.cpp  BucketSort.h  Heapify.cpp  PartialBubbleSort.cpp  PartialBubbleSort.h  PartialHeapify.cpp  PartialHeapify.h
pxsort/include/: pxsort.h
pxsort/pxsort/: Comparator.cpp  Comparator.h  Effect.cpp  Effect.h  Image.cpp  Image.h  Mixer.cpp  Mixer.h  Segment.cpp  Segment.h  Segmentation.cpp  Segmentation.h
pxsort/pxsort/effect/: BubbleSort.cpp  BubbleSort.h  CompareAndMix.cpp  CompareAndMix.h  Heapify.cpp  Heapify.h
pxsort/pxsort/segment/: Rectangle.cpp  Rectangle.h
pxsort/pxsort/segmentation/: Grid.cpp  Grid.h
pxsort/segment/: Asendorf.cpp  Asendorf.h  Rectangle.cpp  Rectangle.h
pxsort/segmentation/: Grid.cpp  Grid.h
pxsort/src/: CMakeLists.txt  Effect.cpp  Effect.h  GridTiling.cpp  GridTiling.h  Image.cpp  Image.h  RectangleTile.cpp  RectangleTile.h  Segment.cpp  Segment.h  Segmentation.cpp  Segmentation.h  Tile.cpp  Tile.h  Tiling.cpp  Tiling.h
pxsort/src/effect/: BubbleSort.cpp  BubbleSort.h  CompareAndMix.cpp  CompareAndMix.h  Heapify.cpp  Heapify.h
pxsort/src/segment/: Rectangle.cpp  Rectangle.h
pxsort/src/segmentation/: Grid.cpp  Grid.h
python/: CMakeLists.txt  effect.cpp  image.cpp  mixer.cpp  predicate.cpp  pxsort.cpp  segment.cpp  segmentation.cpp
python_bindings/: CMakeLists.txt  comparator.cpp  core.cpp  effect.cpp  mixer.cpp  predicate.cpp  projection.cpp  pxsort.cpp  segment.cpp  segmentation.cpp  wrapper.h
qt-app/: CMakeLists.txt  pxsort2_en_CA.xts
src/: CMakeLists.txt  Comparator.cpp  Comparator.h  Effect.cpp  Effect.h  Image.cpp  Image.h  Map.cpp  Map.h  Mixer.cpp  Mixer.h  Parameterization.h  PixelComparator.cpp  PixelComparator.h  PixelMixer.cpp  PixelMixer.h  PixelPredicate.cpp  PixelPredicate.h  PixelProjection.cpp  PixelProjection.h  Predicate.cpp  Predicate.h  Projection.cpp  Projection.h  Segment.cpp  Segment.h  Segmentation.cpp  Segmentation.h  Sorter.cpp  Sorter.h  common.h
src/cpp/: CMakeLists.txt  Compute.cpp  Compute.h  Image.cpp  Image.h  Map.cpp  Map.h  Segment.cpp  Segment.h  SegmentPixels.cpp  SegmentPixels.h  Skew.cpp  Skew.h  Sorter.cpp  Sorter.h  fwd.h  python_bindings.cpp  util.h
src/cpp/geometry/: Ellipse.cpp  Ellipse.h  Modulation.cpp  Modulation.h  Point.h  Polygon.cpp  Polygon.h
src/effect/: BucketSort.cpp  BucketSort.h  PartialBubbleSort.cpp  PartialBubbleSort.h  PartialHeapify.cpp  PartialHeapify.h
src/map/: Map.h  Selector.h
src/mixer/: ChannelCopier.cpp  ChannelCopier.h  LinearMixer.cpp  LinearMixer.h
src/old/: Image.h  Segment.cpp  Segment.h
src/parameterization/: Mixer.cpp  Mixer.h  Parameterization.h
src/predicate/: LinearPredicate.cpp  LinearPredicate.h  ThresholdPredicate.cpp  ThresholdPredicate.h
src/python/: __init__.py  image.py  map.py  segment.py  sorter.py
src/python/pxsort/: __init__.py  map.py
src/segment/: Asendorf.cpp  Asendorf.h  Rectangle.cpp  Rectangle.h
src/segmentation/: Grid.cpp  Grid.h
src/sorter/: BucketSort.cpp  BucketSort.h  PartialBubbleSort.cpp  PartialBubbleSort.h  PartialHeapify.cpp  PartialHeapify.h
swig/: CMakeLists.txt  pxsort.i
test/python/: animate.py  main.py
test/python/presets/: july_06_2022_01.py
test/qt-app-poc/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: test_map.py
