
[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"


[project]
name = "pxsort"
version = "0.0.1"
description="""
    A library for creating glitch-art using pixel-sorting,
    and similar techniques.
"""
readme = "README.md"
authors = [
    { name = "George Gianacopoulos", email = "ggianacopoulos@proton.me" },
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
test = ["pytest"]


[tool.scikit-build]
wheel.expand-macos-universal-tags = true


[tool.cibuildwheel]
test-command = "pytest {project}/test"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
build-verbosity = 1